<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:minHeight="56dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_close_connection"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/close_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/blue_grey_50"
            app:cardCornerRadius="28dp"
            app:cardElevation="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:gravity="center"
                android:minHeight="48dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAllCaps="false"
                    android:id="@+id/tv_cancel"
                    android:textColor="#616161"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    android:text="@string/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/fr_cancel"
                android:background="?attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="28dp"
            app:cardElevation="0dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:gravity="center"
                android:minHeight="48dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAllCaps="false"
                    android:id="@+id/tv_close"
                    android:textColor="@android:color/white"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    android:text="@string/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/fr_close"
                android:background="?attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="32dp" />
</LinearLayout>